Change navbar colors (onhover) and search text

--- a/index.html
+++ b/index.html
@@ -40,30 +40,31 @@
 			<nav id="nav-menu-container">
 				<ul class="nav-menu">
 					<li>
-						<a href="#">Gallery</a>
+						<a href="#" onmouseover="this.style.color='#fafafa'">Gallery</a>
 						<ul>
-							<li><a href="#">Artists</a></li>
+							<li><a href="#"  >Artists</a></li>
 							<li><a href="#">Themes</a></li>
 						</ul>
 					</li>
 					<li>
-						<a href="#">Show Case</a>
+						<a href="#"  onmouseover="this.style.color='#fafafa'">Show Case</a>
 						<ul>
-							<li><a href="#">UpComing Events</a></li>
+							<li><a href="#" >UpComing Events</a></li>
 							<li><a href="#">Exhibitions</a></li>
 						</ul>
 					</li>
-					<li><a href="#services">Masha Support</a></li>
-					<li><a href="#portfolio">About Us</a></li>
-					<li><a href="#team">Contact</a></li>
-					<li><a href="#team">In Media</a></li>
+					<li><a href="#services"  onmouseover="this.style.color='#fafafa'">Masha Support</a></li>
+					<li><a href="#portfolio"  onmouseover="this.style.color='#fafafa'">About Us</a></li>
+					<li><a href="#team"  onmouseover="this.style.color='#fafafa'">Contact</a></li>
+					<li><a href="#team"  onmouseover="this.style.color='#fafafa'">In Media</a></li>
 
 				</ul>
 
 			</nav><!-- #nav-menu-container -->
+	
 			<div>
 				<!--<i class="fa fa-search"></i>-->
-				<input type="text" id="searchText" placeholder="Search" style="color:white;">
+				<input type="text" id="searchText" placeholder="Search" style="color:#eeeeee;">
 			</div>
 		</div>
 	</header>
