Style navbar search and responsiveness

--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
 
 			<nav id="nav-menu-container">
 				<ul class="nav-menu">
-					<li>
+					<li class="menu-has-children">
 						<a href="#" onmouseover="this.style.color='#fafafa'">Gallery</a>
 						<ul>
 							<li><a href="#"  >Artists</a></li>
 							<li><a href="#">Themes</a></li>
 						</ul>
 					</li>
-					<li>
+					<li class="menu-has-children">
 						<a href="#"  onmouseover="this.style.color='#fafafa'">Show Case</a>
 						<ul>
-							<li><a href="#" >UpComing Events</a></li>
+							<li><a href="#" >Upcoming Events</a></li>
 							<li><a href="#">Exhibitions</a></li>
 						</ul>
 					</li>
@@ -57,15 +57,12 @@
 					<li><a href="#portfolio"  onmouseover="this.style.color='#fafafa'">About Us</a></li>
 					<li><a href="#team"  onmouseover="this.style.color='#fafafa'">Contact</a></li>
 					<li><a href="#team"  onmouseover="this.style.color='#fafafa'">In Media</a></li>
-
+				</ul>
+				<ul class="nav-menu nav-menu-right">
+					<li><input class="ml-auto" type="text" id="searchText" placeholder="Search" style="color:white;padding-left:10px;"></li>
 				</ul>
 
 			</nav><!-- #nav-menu-container -->
-	
-			<div>
-				<!--<i class="fa fa-search"></i>-->
-				<input type="text" id="searchText" placeholder="Search" style="color:#eeeeee;">
-			</div>
 		</div>
 	</header>
 
