--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 		<section id="team">
 			<div class="container wow fadeInUp">
 				<div class="section-header">
-					<h3 class="section-title">What is Masha Support?</h3>
+					<h3 class="section-title" style="text-decoration: black; text-decoration-line: underline; text-decoration-style: solid;">What is Masha Support?</h3>
 					<p class="section-description">
 						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
 						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
