style: add glyphicon to search

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
 					<li><a href="#team"  onmouseover="this.style.color='#fafafa'">In Media</a></li>
 				</ul>
 				<ul class="nav-menu nav-menu-right">
-					<li><input class="ml-auto" type="text" id="searchText" placeholder="Search" style="color:white;padding-left:10px;"></li>
+					<li id="searchGroup">
+						<i class="glyphicon glyphicon-search"></i>
+						<input class="ml-auto" type="text" id="searchText" placeholder="Search">
+					</li>
 				</ul>
 
 			</nav><!-- #nav-menu-container -->
