--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@
 		<section id="call-to-action">
 			<div class="container wow fadeIn">
 				
-				<div id="myCarousel" class="carousel slide" data-ride="carousel">
+				<div id="myCarousel2" class="carousel slide" data-ride="carousel">
 					<!-- Indicators -->
 					<ol class="carousel-indicators" style="bottom: 105px;">
-						<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-						<li data-target="#myCarousel" data-slide-to="1"></li>
-						<li data-target="#myCarousel" data-slide-to="2"></li>
+						<li data-target="#myCarousel2" data-slide-to="0" class="active"></li>
+						<li data-target="#myCarousel2" data-slide-to="1"></li>
+						<li data-target="#myCarousel2" data-slide-to="2"></li>
 					</ol>
 
 					<!-- Wrapper for slides -->
