style: shift navbar on mobiles to right

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 	<main id="main">
 		<section id="portfolio">
-			<div class="container wow fadeInUp">
+			<div class="container wow fadeInUp row-center">
 				<div class="section-header">
 					<h3 class="section-title">Curated Collection</h3>
 				</div>
