Complete other screens

--- a/index.html
+++ b/index.html
@@ -40,23 +40,23 @@
 			<nav id="nav-menu-container">
 				<ul class="nav-menu">
 					<li>
-						<a href="#" onmouseover="this.style.color='#fafafa'">Gallery</a>
+						<a href="Gallery.html" onmouseover="this.style.color='#fafafa'">Gallery</a>
 						<ul>
-							<li><a href="#"  >Artists</a></li>
-							<li><a href="#">Themes</a></li>
+							<li><a href="artist.html">Artists</a></li>
+							<li><a href="theme.html">Themes</a></li>
 						</ul>
 					</li>
 					<li>
 						<a href="#"  onmouseover="this.style.color='#fafafa'">Show Case</a>
 						<ul>
-							<li><a href="#" >UpComing Events</a></li>
+							<li><a href="events.html" >Upcoming Events</a></li>
 							<li><a href="#">Exhibitions</a></li>
 						</ul>
 					</li>
-					<li><a href="#services"  onmouseover="this.style.color='#fafafa'">Masha Support</a></li>
-					<li><a href="#portfolio"  onmouseover="this.style.color='#fafafa'">About Us</a></li>
-					<li><a href="#team"  onmouseover="this.style.color='#fafafa'">Contact</a></li>
-					<li><a href="#team"  onmouseover="this.style.color='#fafafa'">In Media</a></li>
+					<li><a href="masha.html"  onmouseover="this.style.color='#fafafa'">Masha Support</a></li>
+					<li><a href="about.html"  onmouseover="this.style.color='#fafafa'">About Us</a></li>
+					<li><a href="contact.html"  onmouseover="this.style.color='#fafafa'">Contact</a></li>
+					<li><a href="inmedia.html"  onmouseover="this.style.color='#fafafa'">In Media</a></li>
 
 				</ul>
 
@@ -198,12 +198,12 @@
 		<section id="call-to-action">
 			<div class="container wow fadeIn">
 				
-				<div id="myCarousel" class="carousel slide" data-ride="carousel">
+				<div id="myCarousel1" class="carousel slide" data-ride="carousel">
 					<!-- Indicators -->
 					<ol class="carousel-indicators" style="bottom: 105px;">
-						<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-						<li data-target="#myCarousel" data-slide-to="1"></li>
-						<li data-target="#myCarousel" data-slide-to="2"></li>
+						<li data-target="#myCarousel1" data-slide-to="0" class="active"></li>
+						<li data-target="#myCarousel1" data-slide-to="1"></li>
+						<li data-target="#myCarousel1" data-slide-to="2"></li>
 					</ol>
 
 					<!-- Wrapper for slides -->
