Fix carousel caption position

--- a/index.html
+++ b/index.html
@@ -86,29 +86,32 @@
 
 					<div class="item active">
 						<div class="backgroundImg1"></div>
-						<h2><b>Feature of the day</b></h2>
-						<h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque feugiat iaculis nibh
-							faucibus consequat. Morbi varius tincidunt sem eu ullamcorper. Integer eget dolor sed risus
-							pellentesque semper a vitae mi. </h5>
-
+						<div class="carousel-text">
+							<h2><b>Feature of the day</b></h2>
+							<h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque feugiat iaculis nibh
+								faucibus consequat. Morbi varius tincidunt sem eu ullamcorper. Integer eget dolor sed risus
+								pellentesque semper a vitae mi. </h5>
+						</div>
 					</div>
 
 					<div class="item">
 						<div class="backgroundImg2"></div>
-						<h2><b>Feature of the month</b></h2>
-						<h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque feugiat iaculis nibh
-							faucibus consequat. Morbi varius tincidunt sem eu ullamcorper. Integer eget dolor sed risus
-							pellentesque semper a vitae mi. </h5>
-
+						<div class="carousel-text">
+							<h2><b>Feature of the month</b></h2>
+							<h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque feugiat iaculis nibh
+								faucibus consequat. Morbi varius tincidunt sem eu ullamcorper. Integer eget dolor sed risus
+								pellentesque semper a vitae mi. </h5>
+						</div>
 					</div>
 
 					<div class="item">
 						<div class="backgroundImg3"></div>
-						<h2><b>Feature of the year</b></h2>
-						<h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque feugiat iaculis nibh
-							faucibus consequat. Morbi varius tincidunt sem eu ullamcorper. Integer eget dolor sed risus
-							pellentesque semper a vitae mi. </h5>
-
+						<div class="carousel-text">
+							<h2><b>Feature of the year</b></h2>
+							<h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque feugiat iaculis nibh
+								faucibus consequat. Morbi varius tincidunt sem eu ullamcorper. Integer eget dolor sed risus
+								pellentesque semper a vitae mi. </h5>
+						</div>
 					</div>
 
 				</div>
