Make carousel2 text-only slide

--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@
 					</div>
 
 				</div>
-				<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+				<button class="left carousel-control" data-target="#myCarousel" data-slide="prev">
 					<span class="glyphicon glyphicon-chevron-left"></span>
 					<span class="sr-only">Previous</span>
-				</a>
-				<a class="right carousel-control" href="#myCarousel" data-slide="next">
+				</button>
+				<button class="right carousel-control" data-target="#myCarousel" data-slide="next">
 					<span class="glyphicon glyphicon-chevron-right"></span>
 					<span class="sr-only">Next</span>
-				</a>
+				</button>
 			</div>
 
 		</div>
@@ -210,12 +210,12 @@
 
 			</div>
 		</section>
-		<section id="call-to-action">
-			<div class="container wow fadeIn">
+		<section id="call-to-action" class="container">
+			<div class="wow fadeIn">
 
 				<div id="myCarousel2" class="carousel slide" data-ride="carousel">
 					<!-- Indicators -->
-					<ol class="carousel-indicators" style="bottom: 105px;">
+					<ol class="carousel-indicators" style="bottom: -79px;">
 						<li data-target="#myCarousel2" data-slide-to="0" class="active"></li>
 						<li data-target="#myCarousel2" data-slide-to="1"></li>
 						<li data-target="#myCarousel2" data-slide-to="2"></li>
@@ -225,7 +225,6 @@
 					<div class="carousel-inner">
 
 						<div class="item active">
-							<div class="backgroundImg1Call2Action"></div>
 							<div class="col-lg-9 text-center text-lg-left">
 								<p class="cta-text"> Duis aute irure dolor in reprehenderit in voluptate velit esse
 									cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
@@ -234,7 +233,7 @@
 						</div>
 
 						<div class="item">
-							<div class="backgroundImg2Call2Action"></div>
+							<!--div class="backgroundImg2Call2Action"></div-->
 							<div class="col-lg-9 text-center text-lg-left">
 								<p class="cta-text"> Duis aute irure dolor in reprehenderit in voluptate velit esse
 									cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
@@ -243,7 +242,7 @@
 						</div>
 
 						<div class="item">
-							<div class="backgroundImg3Call2Action"></div>
+							<!--div class="backgroundImg3Call2Action"></div-->
 							<div class="col-lg-9 text-center text-lg-left">
 								<p class="cta-text"> Duis aute irure dolor in reprehenderit in voluptate velit esse
 									cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
@@ -252,16 +251,14 @@
 						</div>
 
 					</div>
-
-					<a class="left carousel-control" href="#myCarousel2" data-slide="prev">
+					<button class="left carousel-control" data-target="#myCarousel2" data-slide="prev">
 						<span class="glyphicon glyphicon-chevron-left"></span>
 						<span class="sr-only">Previous</span>
-					</a>
-					<a class="right carousel-control" href="#myCarousel2" data-slide="next">
+					</button>
+					<button class="right carousel-control" data-target="#myCarousel2" data-slide="next">
 						<span class="glyphicon glyphicon-chevron-right"></span>
 						<span class="sr-only">Next</span>
-					</a>
-
+					</button>
 				</div>
 
 			</div>
