fix: second carousel - text overlapped with buttons replace Masha Support underline to hr

--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
 		<section id="team">
 			<div class="container wow fadeInUp">
 				<div class="section-header">
-					<h3 class="section-title"
-						style="text-decoration: black; text-decoration-line: underline; text-decoration-style: solid;">
+					<h3 class="section-title">
 						What is Masha Support?</h3>
+					<hr style = "width:75vw; height:2px; background: black;"/>
 					<p class="section-description">
 						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
 						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
