fix: footer alignment in small screens

--- a/product.html
+++ b/product.html
@@ -196,7 +196,7 @@
 
 				</div>
 
-				<div class="col-lg-4 col-12 text-center m-c-right">
+				<div class="col-lg-4 col-12 text-center m-t-right">
 
 					<h6 style="margin-top:15px;"><b>Contact</b></h6>
 					<p style="margin-top:-6px;">Facebook</p>
