--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 	<section id="footerZ" style="margin-top:45px;">
 		<div class="">
 
-			<div class="row counters">
+			<div class="row counters row-center">
 
 				<div class="col-lg-4 col-6 text-center m-t-left">
 
@@ -381,7 +381,7 @@
 
 				</div>
 
-				<div class="col-lg-4 col-12 text-center m-c-right">
+				<div class="col-lg-4 col-12 text-center m-t-right">
 
 					<h6 style="margin-top:15px;"><b>Contact</b></h6>
 					<p style="margin-top:-6px;">Facebook</p>
