fix: contant links

--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
 							<br />
 
 						</div>
-						<div class="social-links" style="margin-left: 165px;">
+						<div class="social-links" style="text-align: center">
 							<span href="#" class="facebook"><i class="fa fa-facebook"></i></span>
 							<span href="#" class="instagram"><i class="fa fa-instagram"></i></span>
 						</div>
