style: products.html fix: send inquiry button width fix: modal box centering in small screens

--- a/product.html
+++ b/product.html
@@ -95,7 +95,7 @@
 							<span style="color:lightgray;font-size:18px;">Medium: Oil on Canvas</span><br />
 							<br />
 
-							<button class="btn btn-dark" onmouseover="this.style.color='#fafafa'" style="width:362px;height:29px;" data-toggle="modal" data-target="#myModal">Send Inquiry</button>
+							<button class="btn btn-dark" onmouseover="this.style.color='#fafafa'" style="width:90%; text-transform: uppercase" data-toggle="modal" data-target="#myModal">Send Inquiry</button>
 						</div>
 
 					</div>
@@ -209,8 +209,8 @@
 		</div>
 	</section>
 	<div class="modal" id="myModal">
-		<div class="modal-dialog modal-dialog-centered">
-			<div class="modal-content" style="width:138%;height:500px">
+		<div class="modal-dialog modal-dialog-centered" style="margin: 30px auto">
+			<div class="modal-content" style="width:138%; max-height: 100%">
 
 				<!-- Modal Header -->
 				<div class="modal-header">
