--- a/artist.html
+++ b/artist.html
@@ -39,14 +39,14 @@
 
 			<nav id="nav-menu-container">
 				<ul class="nav-menu">
-					<li>
+					<li class="menu-has-children">
 						<a href="Gallery.html" onmouseover="this.style.color='#fafafa'">Gallery</a>
 						<ul>
 							<li><a href="artist.html">Artists</a></li>
 							<li><a href="theme.html">Themes</a></li>
 						</ul>
 					</li>
-					<li>
+					<li class="menu-has-children">
 						<a href="#"  onmouseover="this.style.color='#fafafa'">Show Case</a>
 						<ul>
 							<li><a href="events.html" >Upcoming Events</a></li>
