--- a/theme.html
+++ b/theme.html
@@ -39,33 +39,33 @@
 
 			<nav id="nav-menu-container">
 				<ul class="nav-menu">
-					<li>
+					<li class="menu-has-children">
 						<a href="Gallery.html">Gallery</a>
 						<ul>
 							<li><a href="artist.html">Artists</a></li>
 							<li><a href="theme.html">Themes</a></li>
 						</ul>
 					</li>
-					<li>
+					<li class="menu-has-children">
 						<a href="#">Show Case</a>
 						<ul>
 							<li><a href="events.html">Upcoming Events</a></li>
 							<li><a href="#">Exhibitions</a></li>
 						</ul>
 					</li>
-					<li><a href="mash.html">Masha Support</a></li>
+					<li><a href="masha.html">Masha Support</a></li>
 					<li><a href="about.html">About Us</a></li>
 					<li><a href="contact.html">Contact</a></li>
 					<li><a href="inmedia.html">In Media</a></li>
 
 				</ul>
-
+				<ul class="nav-menu nav-menu-right">
+					<li id="searchGroup">
+						<i class="glyphicon glyphicon-search"></i>
+						<input class="ml-auto" type="text" id="searchText" placeholder="Search">
+					</li>
+				</ul>
 			</nav><!-- #nav-menu-container -->
-
-			<div>
-				<!--<i class="fa fa-search"></i>-->
-				<input type="text" id="searchText" placeholder="Search" style="color:black;">
-			</div>
 		</div>
 	</header>
 	<main id="main">
