Update artist.html navbar

--- a/artist.html
+++ b/artist.html
@@ -47,25 +47,25 @@
 						</ul>
 					</li>
 					<li class="menu-has-children">
-						<a href="#"  onmouseover="this.style.color='#fafafa'">Show Case</a>
+						<a href="#" onmouseover="this.style.color='#fafafa'">Show Case</a>
 						<ul>
 							<li><a href="events.html" >Upcoming Events</a></li>
 							<li><a href="#">Exhibitions</a></li>
 						</ul>
 					</li>
-					<li><a href=",asha.html"  onmouseover="this.style.color='#fafafa'">Masha Support</a></li>
+					<li><a href="masha.html"  onmouseover="this.style.color='#fafafa'">Masha Support</a></li>
 					<li><a href="about.html"  onmouseover="this.style.color='#fafafa'">About Us</a></li>
 					<li><a href="contact.html"  onmouseover="this.style.color='#fafafa'">Contact</a></li>
 					<li><a href="inmedia.html"  onmouseover="this.style.color='#fafafa'">In Media</a></li>
-
+				</ul>
+				<ul class="nav-menu nav-menu-right">
+					<li id="searchGroup">
+						<i class="glyphicon glyphicon-search"></i>
+						<input class="ml-auto" type="text" id="searchText" placeholder="Search">
+					</li>
 				</ul>
 
 			</nav><!-- #nav-menu-container -->
-	
-			<div>
-				<!--<i class="fa fa-search"></i>-->
-				<input type="text" id="searchText" placeholder="Search" style="color:#eeeeee;">
-			</div>
 		</div>
 	</header>
 
