fix: gallery navbar mobile-navbar shifted to right change mobilenavbar toggle button color

--- a/Gallery.html
+++ b/Gallery.html
@@ -34,7 +34,7 @@
 		<div class="container">
 
 			<div id="logo" class="pull-left" style="margin-top:-13px;">
-				<a href="#hero"><img src="img/MashaBranding.png" alt="" title="" /></img></a>
+				<a href="index.html"><img src="img/MashaBranding.png" alt="" title="" /></img></a>
 			</div>
 
 			<nav id="nav-menu-container">
