fix: theme-navbar

--- a/theme.html
+++ b/theme.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Gallery</title>
+	<title>Themes</title>
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<meta content="" name="keywords">
 	<meta content="" name="description">
@@ -34,7 +34,7 @@
 		<div class="container">
 
 			<div id="logo" class="pull-left" style="margin-top:-13px;">
-				<a href="#hero"><img src="img/MashaBranding.png" alt="" title="" /></img></a>
+				<a href="index.html"><img src="img/MashaBranding.png" alt="" title="" /></img></a>
 			</div>
 
 			<nav id="nav-menu-container">
