--- a/artist.html
+++ b/artist.html
@@ -73,22 +73,39 @@
 		<div class="hero-container">
 			<div id="myCarousel" class="carousel slide" data-ride="carousel">
 				<!-- Indicators -->
-			
+				<ol class="carousel-indicators">
+					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+					<li data-target="#myCarousel" data-slide-to="1"></li>
+				</ol>
 
 				<!-- Wrapper for slides -->
 				<div class="carousel-inner">
-
 					<div class="item active">
 						<div class="backgroundImg1"></div>
-						<h2><b>Artist of the month</b></h2>
-						<h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque feugiat iaculis nibh faucibus consequat. Morbi varius tincidunt sem eu ullamcorper. Integer eget dolor sed risus pellentesque semper a vitae mi. </h5>
-
+						<div class="carousel-text">
+							<h2><b>Artist of the month</b></h2>
+							<h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque feugiat iaculis nibh faucibus consequat. Morbi varius tincidunt sem eu ullamcorper. Integer eget dolor sed risus pellentesque semper a vitae mi. </h5>
+						</div>
 					</div>
 
-					
-
+					<div class="item">
+						<div class="backgroundImg1"></div>
+						<div class="carousel-text">
+							<h2><b>Artist of the month 2</b></h2>
+							<h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque feugiat iaculis nibh faucibus consequat. Morbi varius tincidunt sem eu ullamcorper. Integer eget dolor sed risus pellentesque semper a vitae mi. </h5>
+						</div>
+					</div>
 				</div>
 
+				<!--Side buttons-->
+				<button class="left carousel-control" data-target="#myCarousel" data-slide="prev">
+					<span class="glyphicon glyphicon-chevron-left"></span>
+					<span class="sr-only">Previous</span>
+				</button>
+				<button class="right carousel-control" data-target="#myCarousel" data-slide="next">
+					<span class="glyphicon glyphicon-chevron-right"></span>
+					<span class="sr-only">Next</span>
+				</button>
 			</div>
 			
 		</div>
