--- a/artist.html
+++ b/artist.html
@@ -34,7 +34,7 @@
 		<div class="container">
 
 			<div id="logo" class="pull-left">
-				<a href="#hero"><img src="img/FinalLogoEditWhite@2x.png" alt="" title="" /></img></a>
+				<a href="index.html"><img src="img/FinalLogoEditWhite@2x.png" alt="" title="" /></img></a>
 			</div>
 
 			<nav id="nav-menu-container">
