--- a/artist.html
+++ b/artist.html
@@ -10,6 +10,7 @@
 	<link href="img/favicon.png" rel="icon">
 	<link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
+	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700" rel="stylesheet">
 
@@ -34,7 +35,7 @@
 		<div class="container">
 
 			<div id="logo" class="pull-left">
-				<a href="index.html"><img src="img/FinalLogoEditWhite@2x.png" alt="" title="" /></img></a>
+				<a href="index.html"><img src="img/FinalLogoEditWhite@2x.png" alt="" title="" style="max-height: 40px; max-width:40px;"/></img></a>
 			</div>
 
 			<nav id="nav-menu-container">
