--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<meta content="" name="keywords">
 	<meta content="" name="description">
 
+	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+
 	<link href="img/favicon.png" rel="icon">
 	<link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
@@ -36,7 +38,7 @@
 		<div class="container">
 
 			<div id="logo" class="pull-left">
-				<a href="#hero"><img src="img/FinalLogoEditWhite@2x.png" alt="" title="" /></img></a>
+				<a href="#hero"><img src="img/FinalLogoEditWhite@2x.png" alt="" title=""/></img></a>
 			</div>
 
 			<nav id="nav-menu-container">
