--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 		<div class="container">
 
 			<div id="logo" class="pull-left" style="margin-top:-13px;">
-				<a href="#hero"><img src="img/MashaBranding.png" alt="" title="" /></img></a>
+				<a href="index.html"><img src="img/MashaBranding.png" alt="" title="" /></img></a>
 			</div>
 
 			<nav id="nav-menu-container">
