Change navbar style on homepage

--- a/index.html
+++ b/index.html
@@ -46,8 +46,21 @@
 					<li class="menu-has-children">
 						<a href="Gallery.html" onmouseover="this.style.color='#fafafa'">Gallery</a>
 						<ul>
-							<li><a href="artist.html">Artists</a></li>
-							<li><a href="theme.html">Themes</a></li>
+							<li><a href="#">Paintings</a></li>
+							<li><a href="#">Sculptures</a></li>
+							<li><a href="#">Shawls</a></li>
+							<li><a href="#">Carpets</a></li>
+							<!--li><a href="theme.html">Themes</a></li-->
+						</ul>
+					</li>
+					<li class="menu-has-children">
+						<a href="artist.html" onmouseover="this.style.color='#fafafa'">Artist</a>
+						<ul>
+							<li><a href="#">F N Souza</a></li>
+							<li><a href="#">M F Husain</a></li>
+							<li><a href="#">S H Raza</a></li>
+							<li><a href="#">Ram Kumar</a></li>
+							<li><a href="#">All Artists</a></li>
 						</ul>
 					</li>
 					<li class="menu-has-children">
